style.css
/* CSS BASIC RESET */
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

h1,
h2,
h3,
h4 {
  margin: 0;
  padding: 0;
}

/* DEFINE VARIABLES */
:root {
  /* PRIMARY */
  --color-primary-blue: hsl(246, 80%, 60%);

  --color-primary-light-red-work: hsl(15, 100%, 70%);
  --color-primary-soft-blue-play: hsl(195, 74%, 62%);
  --color-primary-light-red-study: hsl(348, 100%, 68%);
  --color-primary-lime-green-exer: hsl(145, 58%, 55%);
  --color-primary-voilet-social: hsl(264, 64%, 52%);
  --color-primary-soft-orange-care: hsl(43, 84%, 65%);

  /* NEUTRAL */
  --color-neutral-very-dark-blue: hsl(226, 43%, 10%);
  --color-neutral-dark-blue: hsl(235, 46%, 20%);
  --color-neutral-dark-blue-hover: hsl(236, 46%, 33%);
  --color-neutral-desat-blue: hsl(235, 45%, 61%);
  --color-neutral-pale-blue: hsl(236, 100%, 87%);

  /* TYPOGRAPHY */
  /* (card titles e.g. Work, Play) */
  --font-size-base: 18px;
  --font-weight-300: 300;
  --font-weight-400: 400;
  --font-weight-500: 500;
}

html {
  font-size: var(--font-size-base);
  font-family: "Rubik", sans-serif;
  background-color: var(--color-neutral-very-dark-blue);
}

body {
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
}

/* MAIN */
.grid__container {
  width: 80vw;
  height: 70vh;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 30px;
}

.main_item,
.item {
  border: 1px solid black;
  border-radius: 15px;
}

.main_item {
  grid-row-start: 0;
  grid-row-end: span 2;
}

.item {
  background-repeat: no-repeat;
  background-position: 90% -5%;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

.action__container div {
  cursor: pointer;
}

[data-target="work"] {
  background-color: var(--color-primary-light-red-work);
  background-image: url("images/icon-work.svg");
}

[data-target="play"] {
  background-color: var(--color-primary-soft-blue-play);
  background-image: url("images/icon-play.svg");
}

[data-target="study"] {
  background-color: var(--color-primary-light-red-study);
  background-image: url("images/icon-study.svg");
}

[data-target="exercise"] {
  background-color: var(--color-primary-lime-green-exer);
  background-image: url("images/icon-exercise.svg");
}

[data-target="social"] {
  background-color: var(--color-primary-voilet-social);
  background-image: url("images/icon-social.svg");
}

[data-target="selfcare"] {
  background-color: var(--color-primary-soft-orange-care);
  background-image: url("images/icon-self-care.svg");
}

.info__container {
  background-color: var(--color-neutral-dark-blue);
  border-radius: 15px;
  width: 100%;
  height: 80%;
  padding: 1.5em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  cursor: pointer;
  transition: background-color 0.2s ease-in-out;
}

.info__container:hover {
  background-color: var(--color-neutral-dark-blue-hover);
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
}

.header h2 {
  font-size: 1em;
  color: white;
  font-weight: var(--font-weight-500);
}

.header svg {
  fill: #bbc0ff;
  transition: all 0.1s ease-in-out;
}

.header svg:hover {
  fill: white;
}

.current__hour {
  font-size: 3em;
  color: white;
  font-weight: var(--font-weight-300);
}

.previous__hour {
  font-size: 0.9em;
  color: var(--color-neutral-pale-blue);
  font-weight: var(--font-weight-300);
}

/* FOOTER */
.attribution {
  font-size: 11px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

/* RESPONSIVENESS SECTION */

/* MOBILE */
@media only screen and (min-width: 375px) {
}

/* TABLET */
@media only screen and (min-width: 768px) {
}

/* DESKTOP */
@media only screen and (min-width: 1440px) {
}

